Fix layout on mobile, once again

--- a/style.css
+++ b/style.css
@@ -84,6 +84,9 @@ a {
     max-width: none;
     min-width: auto;
   }
+  .project header {
+    flex-direction: column;
+  }
 }
 
 .project h3 {
